--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,7 +1,12 @@
 <h1>Login</h1>
-<form action="/processLogin" method="post">
+<form action="/auth/login" method="post">
   <div><input type="text" name="username" placeholder="username"></div>
   <div><input type="password" name="password" placeholder="password"></div>
   <div><input type="submit"></div>
 </form>
-<a href="/signup">SignUp</a>
+<br>
+ Login 
+ <a href="/auth/facebook/" class="btn">with Facebook</a>
+ <a href="/auth/google/" class="btn">with Google+</a>
+<br>
+ <a href="/auth/signup">SignUp</a>
