--- a/views/home/your-videos.html
+++ b/views/home/your-videos.html
@@ -62,8 +62,8 @@
 									</a>
 									<ul class = "dropdown">
 										<li><a href="your-videos.html">Your videos</a></li>
-										<li><a href="/account">Account Settings</a></li>
-										<li><a href="/auth/logout">Log out</a></li>
+										<li><a href="account-settings.html">Account Settings</a></li>
+										<li><a href="javascript:void(0)">Log out</a></li>
 									</ul>
 								</li>
 								<li class = "drop-down-menu">
