Displaying per user vedios and the ability to delete them

--- a/views/home/account-settings.ejs
+++ b/views/home/account-settings.ejs
@@ -232,7 +232,7 @@
 									Your mail address
 								</div>
 								<div class = "email-info">
-									<h1>dhananjaymg@gmail.com</h1>
+									<h1><%= user.email %></h1>
 									If you want to change your email address, please contact us at <br/>
 									<a href="javascript:">support@anivid.com</a> from your current email address.
 								</div>
