Removed modules, changed policy for pageController

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -71,8 +71,8 @@
 									<img src="img/dropdown.png" alt="Drop Down Arrow"></a>
 									
 									<ul class = "dropdown">
-										<li><a href="commercial-use-plans.html">For Commercial use</a></li>
-										<li><a href="personal-use-plans.html">For Personal use </a></li>
+										<li><a href="/commercial-use-plans">For Commercial use</a></li>
+										<li><a href="/personal-use-plans">For Personal use </a></li>
 									</ul>	
 								</li>
 							</ul>
