--- a/views/auth/index.ejs
+++ b/views/auth/index.ejs
@@ -49,8 +49,8 @@
 							<li class = "drop-down-menu"><a  href="javascript:">Plans and Pricing <img src="img/dropdown.png" alt="Arrow"></a>
 								
 								<ul class = "dropdown">
-										<li><a href="commercial-use-plans.html">For Commercial use</a></li>
-										<li><a href="personal-use-plans.html">For Personal use </a></li>
+										<li><a href="/commercial-use-plans">For Commercial use</a></li>
+										<li><a href="/personal-use-plans">For Personal use </a></li>
 								</ul>	
 
 							</li>
