--- a/views/home/account-settings.ejs
+++ b/views/home/account-settings.ejs
@@ -76,9 +76,9 @@
 										<img src="img/dropdown.png" alt="Drop Down Arrow">
 									</a>
 									<ul class = "dropdown">
-										<li><a href="your-videos.html"></a>Your videos</li>
-										<li><a href="account-settings.html"></a>Account Settings</li>
-										<li>Log out</li>
+										<li><a href="/">Your videos</li>
+										<li><a href="/account">Account Settings</li>
+										<li><a href="/logout">Log out</li>
 									</ul>
 								</li>
 								<li class = "drop-down-menu">
@@ -86,8 +86,8 @@
 									<img src="img/dropdown.png" alt="Drop Down Arrow"></a>
 									
 									<ul class = "dropdown">
-										<li><a href="commercial-use-plans.html">For Commercial use</a></li>
-										<li><a href="personal-use-plans.html">For Personal use </a></li>
+										<li><a href="/commercial-use-plans">For Commercial use</a></li>
+										<li><a href="/personal-use-plans">For Personal use </a></li>
 									</ul>	
 								</li>
 							</ul>
@@ -135,7 +135,11 @@
 									Current plan
 								</div>
 								<div class = "email-info">
-									Free
+									<% if(order != undefined) { %>
+										<h1><%= order.plan %></h1>
+									<% }  else { %>
+									FREE
+									<% } %>
 								</div>
 							</div><!-- end email-section -->
 							
